# Segbased_Detection

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
data/map/: 2.vtk
data/map_origin/: 0.vtk  1.vtk
data/pose/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
data/scan/: 0.vtk  1.vtk  2.vtk  3.vtk  4.vtk  5.vtk  6.vtk  7.vtk  8.vtk
launch/: test_detection.launch  test_detection.launch~  test_detection.rviz
src/: test_detection.cpp
